--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <a href="./CelAutomata/celular_automata.html">
         <h3>Celular Automata</h3>
     </a>
+    <h1>Currículo</h1>
+    <a href="./_Lucca_Del_Debbio_.pdf">
+        <h3>CV</h3>
+    </a>
 </body>
 </html>
