--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Index</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <h1>Examples</h1>
     <a href="./CelAutomata/celular_automata.html">
         <h3>Celular Automata</h3>
     </a>
-    <h1>Currículo</h1>
-    <a href="./_Lucca_Del_Debbio_.pdf">
-        <h3>CV</h3>
-    </a>
+    <h1>Image test</h1>
+    <div class="image">
+    </div>
 </body>
 </html>
